-
Bug
-
Resolution: Done
-
P4: Low
-
4.6.2
-
None
-
Windows XP, compiling in release mode
-
8c9d6a334c695aea2ea6492466bb5b0e6f26c17d
I don't know if this would be considered a bug in the code or in the documentation.
The documentation clearly states:
Q_CHECK_PTR does nothing if QT_NO_DEBUG was defined during compilation.
However, if QT_NO_EXCEPTIONS is not set, the above statement is not true. It actually calls qBadAlloc which throws a std::bad_alloc exception. At the very least, this should be noted in the documentation.
For Gerrit Dashboard: QTBUG-9134 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
107148,6 | Doc: Change Q_CHECK_PTR documentation to match implementation | dev | qt/qtbase | Status: MERGED | +2 | 0 |