Doc: Change Q_CHECK_PTR documentation to match implementation

Task-number: QTBUG-9134
Change-Id: I417be34f5682fa23b7b76131f5713b0917dfae6d
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>